02/service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: web-prod
  name: web-prod
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web-prod
  type: ClusterIP
status:
  loadBalancer: {}
